--- a/_dev/_ejs/_inc/_gnav.ejs
+++ b/_dev/_ejs/_inc/_gnav.ejs
@@ -1,26 +1,92 @@
-      <header>
-         <div class="siteHeader">
-            <div class="wrap clearfix">
-            <% if( logo == true ) { %>
-               <!-- *** logo -->
-               <h1 class="siteHeader_logo">
-                  <a href="<%= $path %>"><span class="name">Satohmsys</span><span class="handWrite">portfoliosite</span></a>
-               </h1>
-               <!-- /// logo -->
-            <% } %>
-
-            <!-- *** navigation -->
-               <nav class="siteHeader_nav nav">
-                  <ul class="wrap">
-                     <li<% if($active == 'top' ){%> class="current"<% } %>><a href="<%= $path %>index.html">TOP</a></li>
-                     <li<% if($active == 'about'){ %> class="current"<%}%>><a href="<%= $path %>page-about.html">ABOUT</a></li>
-                     <li<% if($active == 'think' ){%> class="current"<%}%>><a href="<%= $path %>page-think.html">THINK</a></li>
-                     <li<% if($active == 'works' ){%> class="current"<%}%>><a href="<%= $path %>archive-works.html">WORKS</a></li>
-                     <li class="nav_contact button button-nav"><a href="#contact">CONTACT</a></li>
-                  </ul>
-               </nav>
-               <!-- /// navigation -->
-             
-            </div>
-         </div>
-      </header>
+<header class="siteHeader">
+      <div class="wrap">
+         <p class="siteHeader_logo">
+            <a href="<%- $path %>">
+               <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="150px" height="20px" viewBox="0 0 150 20" enable-background="new 0 0 150 20" xml:space="preserve">
+                  <g>
+                     <g>
+                        <g>
+                           <path fill="#6CBB6B" d="M8.161,5.138l4.139,2.39v4.778l-4.139,2.39l-4.139-2.39V7.527L8.161,5.138 M8.161,1.433
+                           c-0.387,0-0.773,0.084-1.067,0.254l-5.525,3.19C0.981,5.216,0.5,6.048,0.5,6.726v6.382c0,0.678,0.481,1.51,1.068,1.849
+                           l5.525,3.19c0.294,0.17,0.681,0.254,1.067,0.254c0.388,0,0.774-0.084,1.067-0.254l5.526-3.19
+                           c0.587-0.339,1.067-1.171,1.067-1.849V6.726c0-0.678-0.48-1.51-1.067-1.849l-5.526-3.19C8.936,1.517,8.549,1.433,8.161,1.433
+                           L8.161,1.433z"/>
+                        </g>
+                        <polygon fill="#6CBB6B" points="6.84,15.021 1.124,13.964 1.124,5.518 6.84,4.813           "/>
+                     </g>
+                     <g>
+                        <path fill="#6CBB6B" d="M25.246,5.138l4.138,2.39v4.778l-4.138,2.39l-4.14-2.39V7.527L25.246,5.138 M25.246,1.433
+                        c-0.387,0-0.774,0.084-1.068,0.254l-5.525,3.19c-0.588,0.339-1.068,1.171-1.068,1.849v6.382c0,0.678,0.48,1.51,1.068,1.849
+                        l5.525,3.19c0.294,0.17,0.682,0.254,1.068,0.254s0.774-0.084,1.067-0.254l5.526-3.19c0.587-0.339,1.066-1.171,1.066-1.849V6.726
+                        c0-0.678-0.479-1.51-1.066-1.849l-5.526-3.19C26.021,1.517,25.633,1.433,25.246,1.433L25.246,1.433z"/>
+                     </g>
+                     <g>
+                        <g>
+                           <path fill="#6CBB6B" d="M59.766,5.138l4.139,2.39v4.778l-4.139,2.39l-4.139-2.39V7.527L59.766,5.138 M59.766,1.433
+                           c-0.387,0-0.773,0.084-1.067,0.254l-5.526,3.19c-0.588,0.339-1.068,1.171-1.068,1.849v6.382c0,0.678,0.48,1.51,1.068,1.849
+                           l5.526,3.19c0.294,0.17,0.681,0.254,1.067,0.254s0.774-0.084,1.067-0.254l5.525-3.19c0.588-0.339,1.068-1.171,1.068-1.849
+                           V6.726c0-0.678-0.48-1.51-1.068-1.849l-5.525-3.19C60.54,1.517,60.152,1.433,59.766,1.433L59.766,1.433z"/>
+                        </g>
+                        <path fill="#6CBB6B" d="M66.898,18.307h-2.465c-0.291,0-0.529-0.237-0.529-0.528v-6.626c0-0.29,0.238-0.527,0.529-0.527h2.465
+                        c0.291,0,0.528,0.237,0.528,0.527v6.626C67.427,18.069,67.189,18.307,66.898,18.307z"/>
+                     </g>
+                     <g>
+                        <path fill="#6CBB6B" d="M98.014,12.433l-3.729,2.152c-0.109,0.063-0.244,0.063-0.352,0l-3.787-2.186
+                        c-0.108-0.063-0.177-0.18-0.177-0.307v-4.37c0-0.126,0.068-0.244,0.177-0.306l3.787-2.187c0.107-0.063,0.242-0.063,0.352,0
+                        l3.771,2.177c0.054,0.031,0.115,0.047,0.177,0.047h3.185c0.195,0,0.354-0.158,0.354-0.353V6.921c0-0.789-0.56-1.76-1.244-2.154
+                        l-5.35-3.089c-0.294-0.17-0.681-0.254-1.067-0.254s-0.773,0.084-1.068,0.254l-5.349,3.089c-0.685,0.395-1.245,1.365-1.245,2.154
+                        v5.974c0,0.79,0.561,1.76,1.245,2.154l5.349,3.089c0.295,0.17,0.682,0.254,1.068,0.254s0.773-0.084,1.067-0.254l5.35-3.089
+                        c0.685-0.395,1.244-1.364,1.244-2.154v-0.156c0-0.194-0.158-0.353-0.354-0.353H98.19C98.128,12.386,98.067,12.401,98.014,12.433
+                        z"/>
+                        <path fill="#6CBB6B" d="M87.909,11.16V8.694c0-0.291,0.238-0.529,0.528-0.529h6.817c0.29,0,0.528,0.238,0.528,0.529v2.466
+                        c0,0.29-0.238,0.528-0.528,0.528h-6.817C88.147,11.688,87.909,11.45,87.909,11.16z"/>
+                     </g>
+                     <g>
+                        <path fill="#6CBB6B" d="M72.887,9.489V7.907c0-0.127,0.067-0.243,0.176-0.307l3.786-2.186c0.11-0.063,0.244-0.063,0.354,0
+                        l3.786,2.186c0.108,0.063,0.176,0.18,0.176,0.307v1.582c0,0.194,0.158,0.352,0.353,0.352h2.817c0.195,0,0.353-0.157,0.353-0.352
+                        V7.105c0-0.79-0.561-1.759-1.244-2.154l-5.349-3.089c-0.294-0.169-0.682-0.254-1.068-0.254s-0.774,0.085-1.068,0.254
+                        l-5.349,3.089c-0.685,0.396-1.244,1.364-1.244,2.154v2.384c0,0.194,0.158,0.352,0.353,0.352h2.817
+                        C72.729,9.841,72.887,9.684,72.887,9.489z"/>
+                        <path fill="#6CBB6B" d="M78.189,18.374h-2.466c-0.291,0-0.528-0.238-0.528-0.528V4.284c0-0.291,0.237-0.528,0.528-0.528h2.466
+                        c0.29,0,0.528,0.237,0.528,0.528v13.562C78.718,18.136,78.479,18.374,78.189,18.374z"/>
+                     </g>
+                     <g>
+                        <path fill="#6CBB6B" d="M141.839,5.138l4.139,2.39v4.778l-4.139,2.39l-4.139-2.39V7.527L141.839,5.138 M141.839,1.433
+                        c-0.388,0-0.774,0.084-1.067,0.254l-5.526,3.19c-0.587,0.339-1.067,1.171-1.067,1.849v6.382c0,0.678,0.48,1.51,1.067,1.849
+                        l5.526,3.19c0.293,0.17,0.68,0.254,1.067,0.254c0.387,0,0.773-0.084,1.067-0.254l5.525-3.19
+                        c0.588-0.339,1.068-1.171,1.068-1.849V6.726c0-0.678-0.48-1.51-1.068-1.849l-5.525-3.19
+                        C142.612,1.517,142.226,1.433,141.839,1.433L141.839,1.433z"/>
+                     </g>
+                     <g>
+                        <path fill="#6CBB6B" d="M48.922,4.951l-5.349-3.089c-0.294-0.169-0.681-0.254-1.068-0.254c-0.387,0-0.773,0.085-1.067,0.254
+                        l-5.35,3.089c-0.684,0.396-1.244,1.364-1.244,2.155v5.973c0,0.791,0.561,1.76,1.244,2.155l4.127,2.383
+                        c0.235,0.136,0.529-0.034,0.529-0.306v-3.253c0-0.126-0.067-0.242-0.176-0.306l-2.026-1.169
+                        c-0.108-0.063-0.175-0.179-0.175-0.306V7.907c0-0.127,0.066-0.243,0.175-0.307l3.787-2.186c0.109-0.063,0.243-0.063,0.353,0
+                        l3.786,2.186c0.108,0.063,0.177,0.18,0.177,0.307v4.371c0,0.127-0.068,0.243-0.177,0.306l-2.024,1.169
+                        c-0.109,0.063-0.177,0.18-0.177,0.306v3.253c0,0.271,0.294,0.441,0.529,0.306l4.126-2.383c0.685-0.396,1.245-1.364,1.245-2.155
+                        V7.106C50.167,6.315,49.606,5.347,48.922,4.951z"/>
+                     </g>
+                     <path fill="#6CBB6B" d="M117.808,14.709l-3.162-1.678c-0.074-0.04-0.164-0.038-0.237,0.004l-3.058,1.765
+                     c-0.075,0.045-0.17,0.045-0.246,0l-3.892-2.246c-0.077-0.045-0.124-0.126-0.124-0.214V5.82c0-0.006,0.002-0.011,0.002-0.016
+                     V1.609l-0.146,0.084l-2.188,1.263c-0.654,0.379-1.189,1.307-1.189,2.063v8.121c0,0.757,0.535,1.686,1.189,2.063l5.403,3.119
+                     c0.293,0.169,0.681,0.254,1.067,0.254s0.774-0.085,1.068-0.254l5.525-3.19c0.002,0,0.003-0.001,0.004-0.002
+                     C117.985,15.036,117.974,14.796,117.808,14.709z"/>
+                     <path fill="#6CBB6B" d="M133.097,14.709l-3.163-1.678c-0.074-0.04-0.164-0.038-0.238,0.004l-3.057,1.765
+                     c-0.076,0.045-0.171,0.045-0.246,0l-3.894-2.246c-0.075-0.045-0.123-0.126-0.123-0.214V5.82c0-0.006,0.002-0.011,0.002-0.016
+                     V1.609l-0.146,0.084l-2.188,1.263c-0.654,0.379-1.19,1.307-1.19,2.063v8.121c0,0.757,0.536,1.686,1.19,2.063l5.402,3.119
+                     c0.294,0.169,0.682,0.254,1.068,0.254s0.774-0.085,1.068-0.254l5.526-3.19c0.001,0,0.002-0.001,0.003-0.002
+                     C133.275,15.036,133.262,14.796,133.097,14.709z"/>
+                  </g>
+                        </svg></a>
+      </p>
+      <nav class="siteHeader_nav">
+         <ul class="nav">
+            <li><a href="<%- $path %>/about/">会社概要</a></li>
+            <li><a href="<%- $path %>/fields/">事業内容</a></li>
+            <li><a href="<%- $path %>/works/">実績</a></li>
+            <li><a href="<%- $path %>/recruit/">採用情報</a></li>
+            <li><a href="<%- $path %>/inquiry/">お問い合わせ</a></li>
+         </ul>
+      </nav>
+   </div>
+</header>
