--- a/_dev/_ejs/index.ejs
+++ b/_dev/_ejs/index.ejs
@@ -9,159 +9,124 @@
 <%
 $path = '';
 $active = 'top';
-   $css = ['css/_include/style.css'];
-$scripts_global=null;
-$scripts=[
-$path + 'common/js/pjax/spica.js',
-$path + 'common/js/pjax/localsocket.js',
-$path + 'common/js/pjax/pjax-api.js',
-$path + 'common/js/pjax/config.js',
-$path + 'common/js/common.js',
-$path + 'common/js/common.js',
- $path+'js/index/script.js'];
+$css = [ $path + 'common/js/slick/slick-theme.css', $path + 'common/js/slick/slick.css'];
+$scripts_global=[ $path + 'common/js/slick/slick.min.js'];
+$scripts=null;
 
 %>
    <head>
-     <%- include('_inc/_header') %>
+     <%- include('_inc/_head') %>
    </head>
 
    <body class="index">
-      <%- $parts.loadingAnim %>   
+      <%# $parts.loadingAnim %>   
    
       <!-- ***** header  -->
-      <header>
-         <div class="siteHeader">
-            <div class="wrap clearfix">
-              <%- include('_inc/_gnav', {logo: false}) %>
-            </div>
-         </div>
-      </header>
+      <%- include('_inc/_gnav', {link: false}) %>
       <!-- ///// header  -->
-      <div id="pageContent" data-content="index">
 
-
-      <!-- ***** mainvisual -->
-      <section class="mainvisual">
-         <div class="wrap">
-
-            <div class="mainvisual_copy">
-               <h1>
-                  <span class="mainvisual_copy_sup">
-                     <span><i>I am a WEB-CREATOR</i></span>
-                     based in Tokyo.
-                  </span>
-                  <span class="mainvisual_copy_myname">
-                     SATOH <br>
-                     <span class="firstName">MSYS</span>
-                  </span>
-                  <span class="handWrite">
-                     portfolio site
-                  </span>
-               </h1>
-            </div>
-
-            <i class="icon icon-mouse"></i>
-
+      <div id="fetchContent" data-content="index">
+   <!-- ***** mainvisual -->
+   <section class="mainvisual">
+      <div class="wrap">
+         <div class="mainvisual_copy">
+            <p class="mainvisual_copy_en">
+               <span class="firstRow">DEVELOP</span><span class="secondRow">FOR THE</span>
+               <span class="lastRow">FUTURE.</span>
+            </p>
+            <h2 class="mainvisual_copy_ja">未来を拓くエンジニアスキル</h2>
          </div>
-         <img srcset="img/index/_sp/main.png 768w, img/index/main.png" sizes="100vw" src="img/index/main.png" width="700" class="testmb mainvisual_img" alt="">
+      </div>
+      <canvas class="mainvisual_graphic">
       </section>
       <!-- ///// mainvisual  -->
-      
+      <section class="topics">
+         <div class="wrap">
+            <div id="topicsWrapper">
+               <div class="update">
+                  <a href="">
+                     <dl>
+                        <dt class="update_date">2017.12.15</dt><dd class="update_info">アップデート情報</dd>
+                     </dl>
+                  </a>
+               </div>
+               <div class="update">
+                  <a href="">
+                     <dl>
+                        <dt class="update_date">2017.12.31</dt><dd class="update_info">アップデート情報</dd>
+                     </dl>
+                  </a>
+               </div>         
+            </div>
+         </div>
+      </section>
+      <section class="introduction">
+         <div class="wrap">
+            <header class="introduction_index ef ef-dup">
+               <h3>"DEVELOP FOR THE FURUTE."</h3>
+            </header>
+            <p class="introduction_content ef ef-floatup" data-delay='0.2' >
+               私たち、株式会社Donatelloは、<br>お客様の業務を分析し、<br class="spShow">受託システム開発・SESを通じ<br>
+               業務効率化・属人的ミスを軽減するための<br class="spShow">最適なシステムを提案いたします。
+            </p>
+         </div>
+      </section>
       <!-- ***** BODY START -->
       <main class="main">
-
-         <!-- *** ABOUT -->            
-         <section id="about" class="section section-about">
-            <div class="wrap">
-               <article class="section_article">
-                  <header>
-                     <h2 class="section_index">ABOUT</h2>
-                  </header>
-                  <div class="section_content">
-                     東京のWEBデザイナー、サトウマサヤス(satohmsys)です。<br>デザイン、コーディング、フロントエンド。
-                  </div>
-                  <div class="section_footer">
-                     <div class="button button-def"><a href="about/">more</a></div>
-                  </div>
-               </article>
-               <img src="img/index/about-img-pc.png" width="867" alt="" class="section_bg section_bg-first">
-               <img src="img/index/about-img-cofee.png" width="225" alt="" class="section_bg section_bg-last">
- 
-            </div>
-         </section>
-         <!-- /// ABOUT -->   
-
-         <!-- *** THINK -->            
-         <section id="think" class="section section-think">
-            <div class="wrap">
-               <article class="section_article">
-                  <header>
-                     <h2 class="section_index">THINK</h2>
-                  </header>
-                  <div class="section_content">
-                    「メッセージをデザインする」ことを意識しています。<br>
-                    色や写真を使って、使いやすさを計算し、流行を取り入れる。発信したいイメージを適切なかたちにする「意味のあるデザイン」をするのが、プロとしてのデザイナーの仕事だと考えています。
-                  </div>
-                  <div class="section_footer">
-                     <div class="button button-def"><a href="think/">more</a></div>
-                  </div>
-               </article>
-               <img src="img/index/think-img.png" width="538" alt="" class="section_bg section_bg-first">
-            </div>
-         </section>
-         <!-- /// THINK -->  
-
-          <!-- *** works -->            
-         <section id="works" class="section section-works">
-            <div class="wrap">
-               <article class="section_article">
-                  <header>
-                     <h2 class="section_index">WORKS</h2>
-                  </header>
-                  <div class="section_content">
-                     Webサイトのほか、キーヴィジュアルやロゴやアイコンのデザイン、コーディングの実績集です。
-                  </div>
-                  <div class="section_footer">
-                     <div class="button button-def"><a href="works/">more</a></div>
-                  </div>
-               </article>
-               <div class="section_bg">
-                  <div class="section_bg_skewWrapper">
-                     <div class="section_bg_panels">
-                        <div class="section_bg_panel panel">
-                           <h3 class="panel_catName">WEB</h3>
-                        </div>
-                        <div class="section_bg_panel panel">
-                           <h3 class="panel_catName">LOGO</h3>
-                        </div>
-                        <div class="section_bg_panel panel">
-                           <h3 class="panel_catName">VISUAL</h3>
-                        </div>
-                        <div class="section_bg_panel panel">
-                           <h3 class="panel_catName">CORDING</h3>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </section>
-         <!-- /// THINK -->           
-
+         <div class="wrap">
+            <nav >
+               <ul class="siteMap">
+                  <li >
+                     <a href="index.html">
+                        <p class="siteMap_en">
+                           ABOUT
+                        </p>
+                        <h3 class="siteMap_ja">
+                           会社概要
+                        </h3>
+                     </a>
+                  </li>
+                  <li >
+                     <a href="index.html">
+                        <p class="siteMap_en">
+                           BUSINESS
+                        </p>
+                        <h3 class="siteMap_ja">
+                           事業内容
+                        </h3>
+                     </a>
+                  </li>
+                  <li >
+                     <a href="index.html">
+                        <p class="siteMap_en">
+                           WORKS
+                        </p>
+                        <h3 class="siteMap_ja">
+                           実績
+                        </h3>
+                     </a>
+                  </li>
+                  <li >
+                     <a href="index.html">
+                        <p class="siteMap_en">
+                           RECRUIT
+                        </p>
+                        <h3 class="siteMap_ja">
+                           採用情報
+                        </h3>
+                     </a>
+                  </li>               
+               </ul>
+            </nav>
+         </div>
       </main>
       <!-- //// BODY END -->
-      </div>
      
-     <%- include( $path + '_inc/_footer', {hasGradation: false} ) %>
-     <%- $parts.backtotop %>
-     <%- $parts.fixedsns %>
+     <%- include( $path + '_inc/_footer' ) %>
 
       <!-- ***** menu button -->
       <%- $parts.toggle %>
       <!-- //// menu button -->
-
-      <!-- ***** 自己紹介 -->      
-      <%- include($path + '_inc/_intro') %>
-      <!-- ///// 自己紹介 -->
 
      <%- include($path + '_inc/_scripts') %>
    </body>
