--- a/_dev/_ejs/index.ejs
+++ b/_dev/_ejs/index.ejs
@@ -5,7 +5,7 @@
 <!--[if !IE]<!-->
 <html lang="ja">
    <!--<![endif]-->
-   <% include _inc/function %>   
+   <% include('_inc/_function') %>   
 <%
 $path = '';
 $active = 'top';
@@ -15,7 +15,7 @@ $scripts=null;
 
 %>
    <head>
-     <%- include('_inc/_head') %>
+     <%- include( $path + '_inc/_head') %>
    </head>
 
    <body class="index">
