--- a/_dev/_ejs/about/index.ejs
+++ b/_dev/_ejs/about/index.ejs
@@ -16,14 +16,11 @@ $scripts=null;
 <head>
   <%- include($path + '_inc/_head') %>
 </head>
-
 <body class="about">
    <%# $parts.loadingAnim %>   
-   
    <!-- ***** header  -->
    <%- include( $path + '_inc/_gnav', {link: true}) %>
    <!-- ///// header  -->
-
    <div id="fetchContent" data-content="about">
       <!-- ***** mainvisual -->
       <section class="headingArea">
@@ -38,10 +35,10 @@ $scripts=null;
          <canvas class="pattern">
          </section>
          <!-- ///// mainvisual  -->
-         <nav class="pageNav">
-            <ul class="">
-               <li class="pageNav_anchor"><a href="#philosophy">企業理念</a></li>
-               <li class="pageNav_anchor"><a href="#about">会社概要</a></li>               
+         <nav >
+            <ul class="pageNav">
+               <li class="pageNav_anchor"><a href="#philosophy">企業理念<%- $parts.arrowNext %></a></li>
+               <li class="pageNav_anchor"><a href="#about">会社概要<%- $parts.arrowNext %></a></li>               
             </ul>
          </nav>
          <!-- ***** BODY START -->
@@ -51,7 +48,7 @@ $scripts=null;
                <article>
                   <header class="section_index" data-en="philosophy">
                    <h3>
-                     <span class="section_index_en">PHILOSOPHY</span>
+                     <span class="section_index_en"><span>PHILOSOPHY</span></span>
                      <span class="section_index_ja">
                       企業理念
                    </span>
