index スクロール時のロゴ塗り、ナビリンク文字色ちょうせい

--- a/donatello.com/common/scss/_top.scss
+++ b/donatello.com/common/scss/_top.scss
@@ -6,22 +6,26 @@
 	
 
 .siteHeader{
-	svg polygon,
-	svg path
+	polygon,
+	path
 	{
 		transition: transition();
 		fill: #fff;
 	}
 
 	&.scrolled {
-		svg polygon,
-		svg path
+		polygon,
+		path
 		{
 			fill: $green;
-		}		
+		}	
+
+		li{
+			color: inherit;
+		}	
 	}
 
-	a{
+	li{
 		color: #FFF;
 	}
 }
