--- a/donatello.com/common/scss/_colors.scss
+++ b/donatello.com/common/scss/_colors.scss
@@ -27,6 +27,8 @@ $blue : #0C3FFF;
 $blue_deep : #0028ed;
 $green: #8BFFAC;
 
+$coporate_green: #6CBB6B;
+
 
 $instagram: #3f729b;
 $twitter: #55acee;
