--- a/donatello.com/common/scss/_page-about.scss
+++ b/donatello.com/common/scss/_page-about.scss
@@ -13,9 +13,8 @@
 	.intro{
 		line-height: 2;
 		letter-spacing: 0.15em;
-		font-size: 1.125em;
+		font-weight: 500;
 		text-align: center;
-		font-weight: 400;
 	}
 
 
@@ -29,6 +28,18 @@
 			font-weight: 500;
 			font-size: $large;
 			text-align: center;
+			
+			@include break( sp ){
+				font-size: 1.15em;
+				margin-bottom: 20px;
+			}
+		}
+
+		&_img{
+			@include break( sp ){
+				padding-left: 5%;
+				padding-right: 5%;
+			}			
 		}
 		
 	}
@@ -42,6 +53,9 @@
 	.philosophyList{
 		display: inline-block;
 		text-align: left;
+		@include break( sp ){
+			display: block;
+		}		
 
 		li{
 			display: block;
@@ -75,9 +89,22 @@
 				font-family: $din_bold;
 				color: $gray_secondary;
 			}	
+			@include break( sp ){
+				width: 110px;
+				
+				&:after{
+					margin-left: 0;
+					display: block;
+					font-size: small;
+					letter-spacing: 0.1em;
+				}
+			}			
 		}
 		&_content{
 			padding-left: 40px;
+			@include break( sp ){
+				padding-left: 1em;
+			}			
 		}
 	}
 	
