--- a/donatello.com/common/scss/_module-pages.scss
+++ b/donatello.com/common/scss/_module-pages.scss
@@ -27,7 +27,12 @@
 		padding-bottom: 100px;
 		text-shadow: 0 0 10px #666;		
 		vertical-align: middle;
-		font-size: 2em;
+		font-size: $xlarge;
+		
+		@include break( sp ){
+			font-size: $large;
+		}
+
 		
 		&_en{
 			letter-spacing: 0.33em;
@@ -57,6 +62,8 @@
 	line-height: 1;
 	border-bottom: solid 1px $border;
 	
+			
+	
 	&_anchor{
 		display: table-cell;
 		vertical-align: middle;
@@ -74,6 +81,10 @@
 		color: inherit;
 		display: block;
 		
+		@include break( sp ){
+			padding: 15px 7px;
+			font-size: $small;
+		}
 
 		&:before{
 			content: " ";
@@ -146,7 +157,10 @@
 	position: relative;
 	font-size: $large;
 	text-align: center;
-	.wrap{}
+	
+	@include break( sp ){
+		margin-bottom: 30px;
+	}
 			
 
 	&_en{
