common ページキーワード挿入エリア追加

--- a/_dev/_ejs/_inc/_footer.ejs
+++ b/_dev/_ejs/_inc/_footer.ejs
@@ -17,7 +17,7 @@
             <section>
                <header>
                   <h2 class="siteFooter_info">
-                     東京都のシステム開発、SESを行うDonatello※サンプルキーワード
+                     <%- $keyword %>
                   </h2>
                </header>
                <div class="siteFooter_address">
