--- a/_dev/_ejs/_inc/_function.ejs
+++ b/_dev/_ejs/_inc/_function.ejs
@@ -1,12 +1,13 @@
 <%
-   hasGradation = false,
    $scripts = new Array(),
    $scripts_global=new Array();
 
+   $keyword = 'Donatello - 東京のSES、システム開発、エンジニア育成※さんぷる';
+
    $meta = {
-      title: 'satohmsys portfolio',
+      title: 'Donatello 東京のSES、システム開発、エンジニア育成',
       description: 'ディスクリプション',
-      keywords: 'Webデザイン,Webデザイナー,東京,フリーランス,コーディング,ホームページ制作,個人',
+      keywords: '東京システム開発,SES,エンジニア',
       og:{
          title: 'og title',
          sitename: 'og sitenmae',
