--- a/_dev/_ejs/about/index.ejs
+++ b/_dev/_ejs/about/index.ejs
@@ -19,7 +19,7 @@ $scripts=null;
 <body class="about">
    <%# $parts.loadingAnim %>   
    <!-- ***** header  -->
-   <%- include( $path + '_inc/_gnav', {link: true}) %>
+   <%- include( $path + '_inc/_gnav', {isChild: true}) %>
    <!-- ///// header  -->
    <div id="fetchContent" data-content="about">
       <!-- ***** mainvisual -->
