--- a/_dev/_ejs/index.ejs
+++ b/_dev/_ejs/index.ejs
@@ -22,7 +22,7 @@ $scripts=null;
       <%# $parts.loadingAnim %>   
    
       <!-- ***** header  -->
-      <%- include('_inc/_gnav', {link: false}) %>
+      <%- include('_inc/_gnav', {isChild: false}) %>
       <!-- ///// header  -->
 
       <div id="fetchContent" data-content="index">
