--- a/donatello.com/common/scss/_modules.scss
+++ b/donatello.com/common/scss/_modules.scss
@@ -18,14 +18,18 @@
 .siteHeader
 {
 	line-height: 1;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 40px;
+	padding-bottom: 40px;
 	position: fixed;
 	top: 0;
 	right: 0;
 	left: 0;
 	z-index: 10;
 	transition: transition();
+	 	@include break( tab ){
+	 		padding-top: 15px;
+	 		padding-bottom: 15px;
+	 	}		
 	
 	&:after{
 		content:"";
@@ -47,7 +51,7 @@
 
 	/////// navigation open (clicked and scroll	
 	@at-root &.scrolled  {
-		padding-bottom: 22px;
+		// padding-bottom: 22px;
 		background-color: rgba(#fff, 0.95);
 		
 		&:after{
@@ -64,6 +68,7 @@
 	 	flex-direction: row;
 	 	justify-content: space-between;
 	 	align-items: center;
+	 	position: relative;
 	 	
 	 	@include break( tab ){
 	 		display: block;
@@ -78,6 +83,18 @@
 		 		display: block;
 		 	}
 		}
+	}
+
+	&_word{
+		line-height: 1;
+		position: absolute;
+		right: 0;
+		top: -35px;
+		color: $gray_secondary;
+		font-size: 10px;
+	 	@include break( tab ){
+	 		display: none;
+	 	}			
 	}
 
 	&_logo{
