--- a/donatello.com/common/css/style.css
+++ b/donatello.com/common/css/style.css
@@ -30,7 +30,13 @@
     }
 }body
 {margin-top: 0;margin-right: auto;margin-bottom: 0;margin-left: auto;
-    padding-top: 60px;
+    padding-top: 120px;
+}@media screen and (max-width: 780px)
+{
+    body
+    {
+        padding-top: 60px;
+    }
 }h1,
 h2,
 h3,
@@ -204,7 +210,13 @@ a img:focus
     opacity: 1;
 }.siteHeader
 {
-    line-height: 1;position: fixed;z-index: 10;top: 0;right: 0;left: 0;padding-top: 20px;padding-bottom: 20px;transition: all .3s cubic-bezier(.785, .135, .15, .86) 0s;
+    line-height: 1;position: fixed;z-index: 10;top: 0;right: 0;left: 0;padding-top: 40px;padding-bottom: 40px;transition: all .3s cubic-bezier(.785, .135, .15, .86) 0s;
+}@media screen and (max-width: 780px)
+{
+    .siteHeader
+    {
+        padding-top: 15px;padding-bottom: 15px;
+    }
 }.siteHeader:after
 {position: absolute;right: 0;bottom: 0;left: 0;display: block;width: 0;height: 2px;margin: auto;
 
@@ -217,7 +229,7 @@ a img:focus
     }
 }.siteHeader.scrolled
 {
-    padding-bottom: 22px;background-color: rgba(255,255,255,.95);
+    background-color: rgba(255,255,255,.95);
 }.siteHeader.scrolled:after
 {
     width: 100%;
@@ -225,8 +237,9 @@ a img:focus
 {
     color: #fff;background-color: transparent;
 }.siteHeader > .wrap
-{
-    display: -webkit-box                                                                                                                                ;display: -webkit-flex;display: -ms-flexbox;display:         flex;flex-direction: row;-webkit-box-orient: horizontal;-webkit-box-direction: normal;-webkit-flex-direction: row;-ms-flex-direction: row;-webkit-box-pack: justify;-webkit-justify-content: space-between;-ms-flex-pack: justify;justify-content: space-between;-webkit-box-align: center;-webkit-align-items: center;-ms-flex-align: center;align-items: center;
+{position: relative;
+
+    display: -webkit-box                                                                                                                                    ;display: -webkit-flex;display: -ms-flexbox;display:         flex;flex-direction: row;-webkit-box-orient: horizontal;-webkit-box-direction: normal;-webkit-flex-direction: row;-ms-flex-direction: row;-webkit-box-pack: justify;-webkit-justify-content: space-between;-ms-flex-pack: justify;justify-content: space-between;-webkit-box-align: center;-webkit-align-items: center;-ms-flex-align: center;align-items: center;
 }@media screen and (max-width: 780px)
 {
     .siteHeader > .wrap
@@ -239,6 +252,15 @@ a img:focus
     .siteHeader > .wrap .siteHeader_nav
     {
         display: block;
+    }
+}.siteHeader_word
+{font-size: 10px;
+    line-height: 1;position: absolute;top: -35px;right: 0;color: #aaa;
+}@media screen and (max-width: 780px)
+{
+    .siteHeader_word
+    {
+        display: none;
     }
 }.siteHeader_logo
 {line-height: 1;position: relative;
@@ -714,10 +736,16 @@ a img:focus
 }.index
 {
     padding-top: 0;
+}.index .siteHeader
+{
+    padding-top: 40px;padding-bottom: 20px;
 }.index .siteHeader polygon,
 .index .siteHeader path
 {
     transition: all .3s cubic-bezier(.785, .135, .15, .86) 0s;fill: #fff;
+}.index .siteHeader.scrolled
+{
+    padding-top: 20px;
 }.index .siteHeader.scrolled polygon,
 .index .siteHeader.scrolled path
 {
