--- a/donatello.com/common/scss/_module-pages.scss
+++ b/donatello.com/common/scss/_module-pages.scss
@@ -62,7 +62,11 @@
 	line-height: 1;
 	border-bottom: solid 1px $border;
 	
-			
+	@include break( tab ){
+		margin-bottom: 60px;
+	}	
+	
+
 	
 	&_anchor{
 		display: table-cell;
@@ -161,21 +165,20 @@
 	@include break( sp ){
 		margin-bottom: 30px;
 	}
-			
+
 
 	&_en{
 		width: 100%;
 
 		position: relative;
-		display: table;
+		display: block;
 		letter-spacing: 0.33em;
 		font-family: $din_bold;
-		color: transparent;
-		background-clip: text;
-		-webkit-background-clip: text;
-		@include background-image( linear-gradient( to right, $blue, $green ) );	
+		// color: transparent;
+		// background-clip: text;
+		// -webkit-background-clip: text;
+		// @include background-image( linear-gradient( to right, $blue, $green ) );	
 		
-
 		svg text{
 			text-align: center;
 		}
