--- a/donatello.com/common/scss/_module-pages.scss
+++ b/donatello.com/common/scss/_module-pages.scss
@@ -66,14 +66,17 @@
 		margin-bottom: 60px;
 	}	
 	
-
-	
 	&_anchor{
 		display: table-cell;
 		vertical-align: middle;
 		text-align: center;
 		font-weight: 500;
 		letter-spacing: 0.33em;
+		
+	
+		@include break( sp ){
+			letter-spacing: 0.25em;
+		}		
 		
 		&:not( :last-child ){
 			border-right: solid 1px $border;
@@ -124,7 +127,14 @@
 		top: 0;
 		right: 5px;
 		bottom: 0;
-		transition: transition();		
+		transition: transition();	
+		
+
+		@include break( sp ){
+			width: 15px;
+			top: auto;
+			bottom: 5px;
+		}
 	}
 }
 
@@ -224,4 +234,31 @@
 		letter-spacing: 0.5em;
 		font-weight: 500;
 	}
+}
+
+
+////////////////////
+
+// to entry
+
+////////////////////
+
+.toEntry{
+	margin-top: 80px;
+	text-align: center;
+	
+	@include break( sp ){
+		margin-top: 55px;
+	}
+	
+	.button{
+		margin-left: auto;margin-right: auto;
+	}
+	
+	&_attention{
+		margin-top: 20px;
+		color: $gray_primary;
+		font-size: $small;
+	}
+	
 }
